[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sounding"
version = "0.1.0"
description = "Network diagnostics MCP server — ping, DNS, traceroute, SSL, port scanning, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Charlie Seay", email = "charlie@seayniclabs.com" },
]
keywords = ["mcp", "network", "diagnostics", "dns", "ping", "traceroute", "ssl", "port-scan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "dnspython",
]

[project.urls]
Homepage = "https://github.com/seayniclabs/sounding"
Repository = "https://github.com/seayniclabs/sounding"
Issues = "https://github.com/seayniclabs/sounding/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pip-audit",
]

[project.scripts]
sounding = "sounding.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sounding"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
